--- a/package.json
+++ b/package.json
@@ -16,7 +16,8 @@
     "mysql": "^2.11.1",
     "passport": "^0.3.2",
     "passport-github2": "^0.1.10",
-    "passport-local": "^1.0.0"
+    "passport-local": "^1.0.0",
+    "nodemailer": "^2.3.0"
   },
   "devDependencies": {},
   "scripts": {
